--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
 ]
 
 [project.scripts]
-cvestat = "cvestat.cvestat:stat_cve"
+cvestat = "cvestat.cve_stat:main"
 
 [project.urls]
 "Homepage" = "https://github.com/colorfulshark/cvestat"
