add dependencies in package metadata
Signed-off-by: Ryan Wong <colorfulshark@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,11 @@ authors = [
 description = "A tool for searching CVEs in various ways"
 readme = "README.md"
 requires-python = ">=3.7"
+dependencies = [
+    "appdirs",
+    "cpe",
+    "sqlalchemy",
+]
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: Apache Software License",
