--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "appdirs",
     "cpe",
     "sqlalchemy",
+    "tabulate",
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
