--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ requires-python = ">=3.7"
 dependencies = [
     "appdirs",
     "cpe",
-    "cwe",
+    "cwe2",
     "sqlalchemy",
     "tabulate",
 ]
